# Project-Data-Warehouse

./: .gitignore  Makefile  README.md  create_tables.py  etl.py  local_dwh.cfg  main.tf  pyproject.toml  setup.py  sql_queries.py  terraform.tfplan  utils.py  variables.tf
